--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,57 @@
-# Dependencies
+# =====================================================
+# ERP/CRM System - GitIgnore Configuration
+# =====================================================
+
+# ========================================
+# DEPENDENCIES AND PACKAGES
+# ========================================
+
+# Node.js dependencies
 node_modules/
-*/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Package lock files (comment out the ones you want to keep)
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# ========================================
+# ENVIRONMENT AND CONFIG FILES
+# ========================================
 
 # Environment variables
 .env
 .env.local
-.env.development
-.env.production
-.env.example
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Build outputs
-dist/
-build/
-*/dist/
-*/build/
+# But keep example files
+!.env.example
+!.env.development
+!.env.production
+
+# Configuration files with secrets
+config/secrets.json
+config/database.json
+config/production.json
+
+# ========================================
+# LOGS AND RUNTIME DATA
+# ========================================
 
 # Logs
-logs
+logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+lerna-debug.log*
+.npm
+.eslintcache
 
 # Runtime data
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
@@ -32,32 +60,339 @@ pids
 coverage/
 *.lcov
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# nyc test coverage
+.nyc_output/
 
-# IDE files
-.vscode/settings.json
-.vscode/launch.json
-.vscode/extensions.json
+# ========================================
+# DATABASE AND DATA FILES
+# ========================================
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Database dumps and backups
+database/backups/*.sql
+database/backups/*.sql.gz
+database/backups/*.dump
+backup_*.sql
+backup_*.sql.gz
+
+# Data directories
+data/postgres/
+data/redis/
+data/uploads/
+uploads/
+
+# Migration temporary files
+database/migrations/tmp/
+
+# ========================================
+# BUILD OUTPUT AND CACHE
+# ========================================
+
+# Build directories
+dist/
+build/
+out/
+.next/
+.nuxt/
+
+# Cache directories
+.cache/
+.parcel-cache/
+.vite/
+.turbo/
+
+# Webpack cache
+.webpack/
+
+# ========================================
+# DEVELOPMENT TOOLS
+# ========================================
+
+# IDE and Editor files
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/settings.template.json
+
 .idea/
 *.swp
 *.swo
 *~
 
-# Database
-*.sqlite
-*.db
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
 
-# Docker
-*.log
+# Vim
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
 
-# Temporary files
-*.tmp
-*.temp
-README.md
+# ========================================
+# OPERATING SYSTEM FILES
+# ========================================
+
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+.AppleDouble
+.LSOverride
+.DocumentRevisions-V100
+.fseventsd
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# Linux
+*~
+.directory
+.Trash-*
+
+# ========================================
+# DOCKER AND CONTAINERS
+# ========================================
+
+# Docker volumes data (but keep structure)
+data/postgres/*
+!data/postgres/.gitkeep
+data/redis/*
+!data/redis/.gitkeep
+
+# Docker override files (personal configurations)
+docker-compose.override.yml
+
+# Container logs
+docker/logs/
+
+# ========================================
+# TESTING
+# ========================================
+
+# Test results
+test-results/
+junit.xml
+coverage.xml
+*.cover
+.coverage
+.coverage.*
+
+# Jest
+.nyc_output/
+
+# Cypress
+cypress/videos/
+cypress/screenshots/
+cypress/fixtures/downloads/
+
+# ========================================
+# TEMPORARY FILES
+# ========================================
+
+# Temporary directories
+tmp/
+temp/
+.tmp/
+
+# Lock files
+*.lock
+
+# Backup files
+*.bak
+*.backup
+*.old
+*.orig
+
+# ========================================
+# SECURITY AND SENSITIVE DATA
+# ========================================
+
+# Private keys
+*.pem
+*.key
+!public.key
+
+# SSL certificates
+*.crt
+*.csr
+*.p12
+*.pfx
+
+# JWT secrets
+jwt-secret.txt
+
+# API keys and tokens
+.secrets
+secrets.json
+.env.secrets
+
+# ========================================
+# DOCUMENTATION BUILD
+# ========================================
+
+# Generated documentation
+docs/_build/
+docs/.doctrees/
+docs/api/
+
+# Storybook build
+storybook-static/
+
+# ========================================
+# FRONTEND SPECIFIC
+# ========================================
+
+# React/Vite build artifacts
+.vite/
+vite.config.*.timestamp-*
+
+# ESLint cache
+.eslintcache
+
+# Stylelint cache
+.stylelintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache
+.cache
+.parcel-cache
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# ========================================
+# BACKEND SPECIFIC
+# ========================================
+
+# NestJS build
+dist/
+
+# TypeORM
+ormconfig.env
+
+# PM2
+.pm2/
+
+# ========================================
+# CLOUD AND DEPLOYMENT
+# ========================================
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+
+# Kubernetes secrets
+k8s-secrets.yml
+
+# Helm charts dependencies
+charts/*/charts/
+charts/*/requirements.lock
+
+# ========================================
+# MONITORING AND ANALYTICS
+# ========================================
+
+# Sentry
+.sentryclirc
+
+# NewRelic
+newrelic_agent.log
+
+# ========================================
+# CUSTOM PROJECT FILES
+# ========================================
+
+# Project specific temporary files
+.project-tmp/
+
+# Local development overrides
+local.config.js
+local.settings.json
+
+# Personal notes and todos
+NOTES.md
+TODO.md
+*.personal.md
+
+# Scripts personales de desarrollo
+scripts/personal/
+scripts/dev-*
+
+# Archivos de testing local
+test-data/
+mock-data/
+
+# ========================================
+# KEEP IMPORTANT STRUCTURE FILES
+# ========================================
+
+# Keep empty directories with .gitkeep
+!.gitkeep
+
+# Keep important config templates
+!docker-compose.*.yml
+!Dockerfile*
+!nginx.conf
+!package.json
+!tsconfig.json
+
+# Keep documentation
+!README.md
+!CHANGELOG.md
+!LICENSE
+!docs/README.md
+
+# Keep important scripts
+!scripts/setup.sh
+!scripts/backup.sh
+!scripts/deploy.sh
+
+# ========================================
+# END OF GITIGNORE
+# ========================================
