--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -3,19 +3,38 @@
 # ====================================
 NODE_ENV=development
 PORT=3000
-API_PREFIX=api/v1
+API_PREFIX=api
+ 
+# ====================================
+# INFORMACIÓN DEL SISTEMA
+# ====================================
+APP_NAME=Sistema ERP/CRM
+APP_VERSION=1.0.0
+APP_DESCRIPTION=Sistema ERP/CRM Full-Stack desarrollado con NestJS y React
+GLOBAL_PREFIX=api
 
 # ====================================
-# BASE DE DATOS
+# BASE DE DATOS Y OPTIMIZACIÓN
 # ==================================== 
 DATABASE_TYPE=postgres
-DATABASE_HOST=localhost
+DATABASE_HOST=database
 DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=your_secure_password
+DATABASE_PASSWORD=password
 DATABASE_NAME=erp_crm_db
-DATABASE_SYNCHRONIZE=true
+DATABASE_SCHEMA=public
+DATABASE_SYNC=true
 DATABASE_LOGGING=true
+DATABASE_MAX_CONNECTIONS=10
+DATABASE_MIN_CONNECTIONS=1
+DATABASE_CONNECTION_TIMEOUT=30000
+DATABASE_IDLE_TIMEOUT=300000
+DATABASE_SSL=false
+DATABASE_SSL_REJECT_UNAUTHORIZED=false
+DATABASE_RUN_MIGRATIONS=true
+DATABASE_CACHE=false
+DATABASE_CACHE_DURATION=30000
+
 
 # Para producción usar connection URL
 # DATABASE_URL=postgresql://username:password@host:port/database
@@ -23,13 +42,31 @@ DATABASE_LOGGING=true
 # ====================================
 # AUTENTICACIÓN Y SEGURIDAD
 # ====================================
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_EXPIRATION=7d
-JWT_REFRESH_SECRET=your-refresh-token-secret
+JWT_SECRET=contra_solo_usada_en_desarrollo_cambiar
+JWT_EXPIRES_IN=7d
+JWT_REFRESH_SECRET=refresh_secret_key_desarrollo_cambiar
 JWT_REFRESH_EXPIRATION=30d
+JWT_ISSUER=erp-crm-system
+JWT_AUDIENCE=erp-crm-users
 
-# Salt rounds for bcrypt (10-12 recommended for production)
-BCRYPT_SALT_ROUNDS=10
+# Salt rounds for bcrypt (10-12 recommended for production) and password requirements
+PASSWORD_SALT_ROUNDS=10
+PASSWORD_MIN_LENGTH=8
+PASSWORD_REQUIRE_UPPERCASE=true
+PASSWORD_REQUIRE_LOWERCASE=true
+PASSWORD_REQUIRE_NUMBERS=true
+PASSWORD_REQUIRE_SPECIAL=true
+
+# ====================================
+# SESSION AND LOGIN ATTEMPTS
+# ====================================
+MAX_CONCURRENT_SESSIONS=5
+SESSION_TIMEOUT=86400000
+MAX_LOGIN_ATTEMPTS=5
+LOCKOUT_DURATION=3600000
+ENABLE_TWO_FACTOR=false
+PASSWORD_RESET_EXPIRATION=3600000
+EMAIL_VERIFICATION_EXPIRATION=86400000
 
 # ====================================
 # REDIS (para cache y queues)
@@ -37,24 +74,36 @@ BCRYPT_SALT_ROUNDS=10
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=redispassword
-REDIS_DB=0
+REDIS_CACHE_DB=1
+CACHE_TTL=600
+USER_SESSION_TTL=86400 
+API_RESPONSE_TTL=300
+REPORT_DATA_TTL=1800
+MASTER_DATA_TTL=3600
 
 # ====================================
 # EMAIL CONFIGURATION
 # ====================================
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_SECURE=false
-MAIL_USER=your-email@gmail.com
-MAIL_PASSWORD=your-app-password
-MAIL_FROM=noreply@yourcompany.com
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
+EMAIL_FROM=noreply@yourcompany.com
+EMAIL_REPLY_TO=reply@yourcompany.com
+EMAIL_TLS_REJECT_UNAUTHORIZED=false
+EMAIL_TEMPLATES_DIR=src/templates/email
+EMAIL_RATE_LIMIT_MAX=10
+EMAIL_RATE_LIMIT_WINDOW=3600000
+EMAIL_QUEUE_ENABLED=false
+EMAIL_QUEUE_ATTEMPTS=3
 
 # ====================================
 # STORAGE Y FILE UPLOAD
 # ====================================
 MAX_FILE_SIZE=10485760
 UPLOAD_DEST=./uploads
-ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,application/pdf,text/csv,application/vnd.ms-excel
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,application/pdf,text/csv,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
 
 # AWS S3 (opcional)
 AWS_ACCESS_KEY_ID=
@@ -65,8 +114,8 @@ AWS_S3_REGION=
 # ====================================
 # RATE LIMITING
 # ====================================
-THROTTLE_TTL=60
-THROTTLE_LIMIT=100
+RATE_LIMIT_TTL=60000
+RATE_LIMIT_MAX=100
 
 # ====================================
 # CORS CONFIGURATION
@@ -106,8 +155,10 @@ NEW_RELIC_LICENSE_KEY=
 # DESARROLLO Y TESTING
 # ====================================
 SWAGGER_ENABLE=true
-API_DOCS_PATH=docs
-MOCK_DATA_ENABLED=true
+SWAGGER_TITLE=Sistema ERP/CRM
+SWAGGER_DESCRIPTION=Documentacion del Sistema ERP/CRM Full-Stack desarrollado con NestJS y React
+SWAGGER_VERSION=1.0
+SWAGGER_PATH=docs
 
 # ====================================
 # PGADMIN CONFIGURATION
@@ -115,3 +166,25 @@ MOCK_DATA_ENABLED=true
 PGADMIN_DEFAULT_EMAIL=admin@localhost
 PGADMIN_DEFAULT_PASSWORD=admin
 PGADMIN_LISTEN_PORT=5050
+
+# ====================================
+# PAGE CONFIGURATION
+# ====================================
+DEFAULT_PAGE_SIZE=20
+MAX_PAGE_SIZE=100
+
+# ====================================
+# PAYPAL CONFIGURATION
+# ====================================
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
+
+# ====================================
+# OAUTH CONFIGURATION
+# ====================================
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_OAUTH_ENABLED=false
+MICROSOFT_CLIENT_ID=
+MICROSOFT_CLIENT_SECRET=
+MICROSOFT_OAUTH_ENABLED=false
