--- a/frontend/.env.dev
+++ b/frontend/.env.dev
@@ -55,3 +55,27 @@ VITE_NODE_ENV=production
 VITE_DEBUG=false
 VITE_SHOW_REDUX_LOGGER=false
 VITE_ENABLE_ANALYTICS=true
+
+
+
+
+### Uso de nueva formula verificacionde cuales si y no 
+# API Configuration
+VITE_API_URL=http://localhost:3000
+VITE_API_VERSION=v1
+
+# App Configuration
+VITE_APP_NAME=ERP/CRM System
+VITE_APP_VERSION=1.0.0
+
+# Features Flags
+VITE_ENABLE_DEBUG=true
+VITE_ENABLE_ANALYTICS=false
+
+# Session Configuration
+VITE_SESSION_TIMEOUT=30
+VITE_MAX_LOGIN_ATTEMPTS=5
+
+# Pagination
+VITE_DEFAULT_PAGE_SIZE=10
+VITE_MAX_PAGE_SIZE=100
