--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,20 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Build
+build
+coverage
+
+# Testing
+coverage
+
+# Misc
+.cache
+.temp
+.tmp
