--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   "author": "Armando",
   "license": "MIT",
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "@tailwindcss/cli": "^4.1.14",
+    "@tailwindcss/postcss": "^4.1.14",
+    "concurrently": "^8.2.0",
+    "tailwindcss": "^4.1.14"
   }
 }
